[gd_scene load_steps=3 format=3 uid="uid://dtb35qb0m2hg3"]

[ext_resource type="Script" path="res://scripts/list_item.gd" id="1_v601v"]
[ext_resource type="PackedScene" uid="uid://bk1m1y62ce6gv" path="res://scenes/list_item_component.tscn" id="2_beth4"]

[node name="ListItem" type="Control"]
custom_minimum_size = Vector2(656, 128)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -328.0
offset_top = -64.0
offset_right = 328.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_v601v")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 36.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="ListItemComponent1" parent="PanelContainer/HBoxContainer" instance=ExtResource("2_beth4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlusLabel" type="Label" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ListItemComponent2" parent="PanelContainer/HBoxContainer" instance=ExtResource("2_beth4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="EqualLabel" type="Label" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="ListItemComponent3" parent="PanelContainer/HBoxContainer" instance=ExtResource("2_beth4")]
layout_mode = 2
size_flags_horizontal = 3
